<resources>
    <string name="app_name">Expression Solver</string>
    <string name="equal">=</string>
    <string name="add">+</string>
    <string name="pi">π</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="parenthesis">()</string>
    <string name="subtract">-</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="ln">ln</string>
    <string name="multiply">X</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="factorial">!</string>
    <string name="divide">/</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="e">E</string>
    <string name="logln">LOG LN</string>
    <string name="sqrt">√</string>
    <string name="exponent">^</string>
    <string name="c">C</string>
    <string name="backspace">BackSpace</string>
</resources>